[package]
name = "test_rust_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ra_ap_project_model = "0.0.149"
ra_ap_paths = "0.0.149"
ra_ap_rust-analyzer = "0.0.149"
ra_ap_hir = "0.0.149"
ra_ap_ide = "0.0.149"
ra_ap_syntax = "0.0.149"
ra_ap_base_db = "0.0.149"
ra_ap_vfs = "0.0.149"
ra_ap_ide_db = "0.0.149"
paste = "1.0.12"

[profile.release]
debug = true

[rust]
debuginfo-level = 1